--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,8 @@
     <!-- Twitter embed -->
     <a class="twitter-timeline" 
        data-height="700" 
-       href="https://twitter.com/YOUR_TWITTER_HANDLE">
-       Tweets by YOUR_TWITTER_HANDLE
+       href="https://twitter.com/nhltradealert">
+       Tweets by NHL Trade Alert
     </a>
   </main>
 
