--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="script.js"></script>
+  <body>
+  <h1>NHL Trade Alert</h1>
+
+  <!-- Twitter feed embed -->
+  <<a class="twitter-timeline" href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">Tweets by NHLTradeAlert</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <!-- More content here later -->
+</body>
 </body>
 </html>
