--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>NHL Trade Alert</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>NHL Trade Alert</h1>
+    <p>Team filters coming soon...</p>
   </header>
 
-  <nav id="team-filter">
-    <!-- Team logos will be added here -->
-    <p>Team filters coming soon...</p>
-  </nav>
-
   <main>
-    <!-- Twitter embed -->
-    <a class="twitter-timeline" 
-       data-height="700" 
-       href="https://twitter.com/nhltradealert">
-       Tweets by NHL Trade Alert
-    </a>
+    <!-- Twitter feed embed -->
+    <a class="twitter-timeline" href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">Tweets by NHLTradeAlert</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </main>
 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="script.js"></script>
-  <body>
-  <h1>NHL Trade Alert</h1>
-
-  <!-- Twitter feed embed -->
-  <<a class="twitter-timeline" href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">Tweets by NHLTradeAlert</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-  <!-- More content here later -->
-</body>
 </body>
 </html>
