--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   </header>
 
   <main>
-    <!-- Twitter feed embed -->
-    <a class="twitter-timeline" href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">Tweets by NHLTradeAlert</a>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </main>
+  <!-- Embedded Twitter Timeline -->
+  <a class="twitter-timeline" data-theme="light" data-height="600" href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">
+    Tweets by NHLTradeAlert
+  </a>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</main>
 
   <script src="script.js"></script>
 </body>
