--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   </header>
 
   <main>
-  <!-- Embedded Twitter Timeline -->
-  <a class="twitter-timeline" data-theme="light" data-height="600" href="https://x.com/NHLTradeAlert?ref_src=twsrc%5Etfw">
-    Tweets by NHLTradeAlert
-  </a>
+  <a class="twitter-timeline" href="https://twitter.com/NHLTradeAlert">Tweets by NHLTradeAlert</a>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </main>
 
