--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NHL Trade Alert</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -11,10 +12,16 @@
     <p>Team filters coming soon...</p>
   </header>
 
-  <main>
-  <a class="twitter-timeline" href="https://twitter.com/NHLTradeAlert">Tweets by NHLTradeAlert</a>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</main>
+  <!-- Twitter Timeline Embed -->
+  <section id="twitter-feed">
+    <a class="twitter-timeline"
+       data-theme="dark"
+       data-tweet-limit="5"
+       href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">
+       Tweets by NHLTradeAlert
+    </a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </section>
 
   <script src="script.js"></script>
 </body>
