--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NHL Trade Alert</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>NHL Trade Alert</h1>
-    <p>Team filters coming soon...</p>
+    <p>Team filters coming soon…</p>
   </header>
 
-  <!-- Twitter Timeline Embed -->
-  <section id="twitter-feed">
-    <a class="twitter-timeline"
-       data-theme="dark"
-       data-tweet-limit="5"
-       href="https://twitter.com/NHLTradeAlert?ref_src=twsrc%5Etfw">
-       Tweets by NHLTradeAlert
-    </a>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </section>
+  <!-- filter nav placeholder -->
+  <nav id="team-filter"></nav>
 
+  <!-- where we’ll inject the timeline -->
+  <main>
+    <div id="twitter-feed"></div>
+  </main>
+
+  <!-- 1) load X’s widget library -->
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <!-- 2) then your script to call the factory -->
   <script src="script.js"></script>
 </body>
 </html>
