--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
        data-width="550"
        data-height="800"
        data-theme="light"
-       href="https://twitter.com/nhl_trade_alert?ref_src=twsrc%5Etfw">
-       Tweets by @nhl_trade_alert
+       href="https://twitter.com/nhltradealert?ref_src=twsrc%5Etfw">
+       Tweets by @nhltradealert
     </a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
